--- a/style.css
+++ b/style.css
@@ -31,7 +31,6 @@ body { font-family: sans-serif; }
   width: 800px;
   height: 800px;
   border: 2px solid black;
-  line-height: 600px;
   font-size: 40px;
   font-weight: bold;
   color: white;
@@ -53,3 +52,24 @@ body { font-family: sans-serif; }
 .cube__face--bottom { transform: rotateX(-90deg) translateZ(400px); }
 
 label { margin-right: 10px; }
+
+.gameboard-path{
+  background-color: grey;
+}
+
+.gameboard-breakout{
+  background-color: grey;
+}
+
+.container{
+  margin: auto;
+  max-width: 600px;
+  max-height: 600px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.btn-start-path{
+  max-width: 50px;
+}
