--- a/Game_Jame/app/Css/style.css
+++ b/Game_Jame/app/Css/style.css
@@ -27,18 +27,35 @@ body { font-family: sans-serif; }
 .cube.show-bottom { transform: translateZ(-400px) rotateX(  90deg); }
 
 .cube__face {
-  display:flex;
-  flex-direction: column;
   position: absolute;
   width: 800px;
   height: 800px;
   border: 2px solid black;
-  font-size: 40px;
   font-weight: bold;
   color: white;
   text-align: center;
   background-image:url(../images/RTS_Crate.png) ;
   background-size: cover;
+}
+
+.cube__face--front {
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.cube__face--right canvas {
+  transform: translateY(-12px);
+}
+
+.cube__face h2 {
+  font-size: 40px;
+}
+
+.cube__face p {
+  max-width: 550px;
+  font-size: 35px;
 }
 
 /* .cube__face--front  { background: hsla(  0, 100%, 50%, 0.9); }
@@ -69,6 +86,13 @@ label { margin-right: 10px; }
   justify-content: center;
 }
 
+.start-btn {
+  margin-top: 30px;
+  padding: 25px 50px;
+  cursor: pointer;
+}
+
 .btn-start-path{
-  max-width: 50px;
+  padding: 25px 50px;
+  cursor: pointer;
 }
