--- a/Game_Jame/app/Css/style.css
+++ b/Game_Jame/app/Css/style.css
@@ -45,7 +45,8 @@ body { font-family: sans-serif; }
   text-align: center;
 }
 
-.cube__face--right canvas {
+.cube__face--right canvas,
+.cube__face--back canvas {
   transform: translateY(-12px);
 }
 
@@ -92,7 +93,8 @@ label { margin-right: 10px; }
   cursor: pointer;
 }
 
-.btn-start-path{
+.btn-start-path,
+.btn-start-breakout {
   padding: 25px 50px;
   cursor: pointer;
 }
