--- a/Game_Jame/app/Css/style.css
+++ b/Game_Jame/app/Css/style.css
@@ -38,7 +38,7 @@ body { font-family: sans-serif; }
   background-size: cover;
 }
 
-.cube__face--front {
+.cube__face--front, .cube__face--left {
   display:flex;
   flex-direction: column;
   align-items: center;
