Revert "final commit"
This reverts commit 9d6507ce61dfec8b98432fbd6d2f3c3033d522fb.

--- a/Game_Jame/app/Css/style.css
+++ b/Game_Jame/app/Css/style.css
@@ -38,7 +38,7 @@ body { font-family: sans-serif; }
   background-size: cover;
 }
 
-.cube__face--front, .cube__face--left {
+.cube__face--front {
   display:flex;
   flex-direction: column;
   align-items: center;
